v0.9.5
- Improvements to new enemy randomization algorithm
- Frontend improvements
- Added two new modes for item block randomization
- Added option to randomize content of brick blocks in underground bonus areas
- Bug fixes
- Fixed Lakitu's coordinates so he doesn't spawn near the ground
- If you input a seed number, the frontend will now store/remember it.

v0.9.4
- Improvements to new enemy randomization algorithm
- Improvements to background/scenery randomization
- Added option to disable warp pipes! Use at your own risk!
- Initial support for randomizing/changing "secondary hard mode"
- Web frontend: dynamic display of flagstring for currently selected options
- Web frontend: general improvements and updates

v0.9.3
- New and improved enemy randomization algorithm!
- Actually use the new flagstring algorithm
- Fixed some sanity checks which in turn fixed some bugs
- Cleaned up the log file, moved many messages to the verbose log option
- Zero out coin tallies for bonus 1ups - not sure if this is actually working
- Allow longer seed numbers
- Removed numbers from the flagstring
- EXPERIMENTAL: Added initial support for randomization of background and scenery

v0.9.2
- Implemented new and better flagstring generation algorithm stolen from Fred Coughlin - thanks!
- Added command line option to select normal or verbose log level
- Seedhash will now be different if the log file was saved or not (useful for racing/tournament purposes)
- Improved titlescreen a little bit
- Removed old code

v0.9
- Added shuffling of underground bonus areas
- Bug fixes
- Lots more sanity checking

v0.8.8
- Removed Pirhana Plants from randomization pool (for the "reasonable" option)
- Avoid putting 4-1 and 6-2 in the same world because of pipe troubles

v0.8.7
- Fixed a rare bug that caused world layout corruption

v0.8.6
- Added option to generate ROM without spoiler log

v0.8.5
- Don't allow zero fireworks

v0.8.4
- Better layout in frontend