@@ -6,6 +6,8 @@ v0.9.5
 - Bug fixes
 - Fixed Lakitu's coordinates so he doesn't spawn near the ground
 - If you input a seed number, the frontend will now store/remember it.
+- The button that links to the most recently created logfile now works every time!
+  (Previously it only worked once, due to a bug.)
 
 v0.9.4
 - Improvements to new enemy randomization algorithm
